<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/venus_small"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raymond.destinycharactertier.Info">

    <TextView
        android:id="@+id/tv_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/info_title" />

    <TextView
        android:id="@+id/tv_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_info1"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:text="@string/info_text1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_info2"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="" />

            <TextView
                android:id="@+id/tv_info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="right"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="Max" />

            <TextView
                android:id="@+id/tv_info5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text=" Roll" />

            <TextView
                android:id="@+id/tv_info6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="Bonus" />

            <TextView
                android:id="@+id/tv_info7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="Total" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_helmet" />

            <TextView
                android:id="@+id/tv_info9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="46" />

            <TextView
                android:id="@+id/tv_info10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="46" />

            <TextView
                android:id="@+id/tv_info11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="19" />

            <TextView
                android:id="@+id/tv_info12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="65" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_gauntlet" />

            <TextView
                android:id="@+id/tv_info14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="41" />

            <TextView
                android:id="@+id/tv_info15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="41" />

            <TextView
                android:id="@+id/tv_info16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="17" />

            <TextView
                android:id="@+id/tv_info17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="58" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_chest" />

            <TextView
                android:id="@+id/tv_info19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="61" />

            <TextView
                android:id="@+id/tv_info20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="61" />

            <TextView
                android:id="@+id/tv_info21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="25" />

            <TextView
                android:id="@+id/tv_info22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="86" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_legs" />

            <TextView
                android:id="@+id/tv_info24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="56" />

            <TextView
                android:id="@+id/tv_info25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="56" />

            <TextView
                android:id="@+id/tv_info26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="23" />

            <TextView
                android:id="@+id/tv_info27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="79" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_class_item" />

            <TextView
                android:id="@+id/tv_info29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="25" />

            <TextView
                android:id="@+id/tv_info30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="25" />

            <TextView
                android:id="@+id/tv_info31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="10" />

            <TextView
                android:id="@+id/tv_info32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="35" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_artifact" />

            <TextView
                android:id="@+id/tv_info34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="38" />

            <TextView
                android:id="@+id/tv_info35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="38" />

            <TextView
                android:id="@+id/tv_info36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="42" />

            <TextView
                android:id="@+id/tv_info37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="80" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_info38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:text="@string/tv_ghost" />

            <TextView
                android:id="@+id/tv_info39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="25" />

            <TextView
                android:id="@+id/tv_info40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="25" />

            <TextView
                android:id="@+id/tv_info41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="10" />

            <TextView
                android:id="@+id/tv_info42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:padding="5dp"
                android:text="30" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:text="@string/info_text2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:text="@string/info_text3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:text="@string/info_text4" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
